--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
     <body>
         <!--Nav bar-->
         <div class="navbar">
-            <div class="container">
+            <div class="container flex">
                 <h1 class="logo">Bluegrass Travel</h1>
                 <nav>
                     <ul>
