--- a/html/index.html
+++ b/html/index.html
@@ -29,7 +29,35 @@
                     </ul>
                 </nav>
             </div>
-        </div>
+        </div
         
+        <!--Main body area-->
+        <section class="showcase">
+            <div class="container grid">
+                <div class=".showcase-text">
+                    <h1>The Place Where Dreams Come True</h1>
+                    <p>Bluegrass Travel is the place to go when your looking for your travel wishes to be made true. We book vacations anywhere in the world from North Korea to Antartica. Luxury and budget trips of any length can be booked here. We're here to serve you</p>
+                    <a href="index.html" class="btn btn-outline">Book Now!</a>
+                </div>
+
+                <div class="showcase-form card">
+                    <h2>Sign Up </h2>
+                    <form>
+                        <div class="form-control">
+                            <input type="text" name="Name" placeholder="Name" required
+                        </div>
+                        <div class="form-control">
+                            <input type="text" name="Email" placeholder="Email" required
+                        </div>
+                        <div class="form-control">
+                            <input type="text" name="Phone Number" placeholder="Phone Number" required
+                        </div>
+                        <div>
+                            <input type="submit" value="send" class="btn btn-primary">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
